[gd_scene load_steps=10 format=3 uid="uid://cq34kx272m135"]

[ext_resource type="PackedScene" uid="uid://chgj6eb6pnpbj" path="res://Scenes/base_goblin.tscn" id="1_ucjxu"]
[ext_resource type="Script" path="res://collector_goblin.gd" id="2_npifj"]
[ext_resource type="Texture2D" uid="uid://db3wbqdb2bp8f" path="res://Assets/egg.png" id="3_k7ya4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xg53d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fn336"]
radius = 6.0

[sub_resource type="Animation" id="Animation_23vto"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("egg_sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -17)]
}

[sub_resource type="Animation" id="Animation_w6w0a"]
resource_name = "idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("egg_sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -17)]
}

[sub_resource type="Animation" id="Animation_xeifo"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("egg_sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, -17), Vector2(0, -18), Vector2(0, -17)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n08lu"]
_data = {
"RESET": SubResource("Animation_23vto"),
"idle": SubResource("Animation_w6w0a"),
"walk": SubResource("Animation_xeifo")
}

[node name="collector_goblin" instance=ExtResource("1_ucjxu")]
script = ExtResource("2_npifj")
egg_container = null
move_speed = 50
interaction_speed = 2.0
health = 2

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CapsuleShape2D_xg53d")

[node name="egg_sprite" type="Sprite2D" parent="." index="1"]
visible = false
position = Vector2(0, -17)
texture = ExtResource("3_k7ya4")

[node name="interaction_box" type="Area2D" parent="." index="4" groups=["collector"]]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction_box" index="0"]
position = Vector2(9, 4)
shape = SubResource("CircleShape2D_fn336")
debug_color = Color(0.333333, 0.521569, 0.890196, 0.419608)

[node name="interaction_block_timer" type="Timer" parent="." index="5"]
wait_time = 2.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]
libraries = {
"": SubResource("AnimationLibrary_n08lu")
}
